# TINs

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: global.json
lib/simple-web-server/: client_http.hpp  http_examples.cpp  server_http.hpp
src/: aaa.h  utility.cpp  utility.h
src/client/: client.h  main_client.cpp
src/common/: aaa.cpp  aaa.h  http.cpp  http.h  utility.cpp  utility.h
src/device/: device.cpp  device.h  http.cpp  http.h  main_device.cpp
src/device-mock/: DeviceMock.cpp  DeviceMock.h  device_testing_mock.cpp
src/proxy/: ClientManager.cpp  ClientManager.h  ConfigParser.cpp  ConfigParser.h  HTTPServerThread.cpp  HTTPServerThread.h  client_manager.cpp  client_manager.h  connection_manager.cpp  connection_manager.h  exceptions.h  main_proxy.cpp  proxy.cpp  proxy.h  sample-config
src/proxy-mock/: ProxyMock.cpp  ProxyMock.h  proxy_testing_mock.cpp
src/server/: server.cpp  server.h
src/wireshark/: tin-aaa.lua
test/: aaa_packet.cpp  test.cpp  test1.cpp  test_proxy.cpp
test/acceptance_scenarios/: delay.txt
